--- a/webui/package.json
+++ b/webui/package.json
@@ -27,6 +27,7 @@
         "axios": "^1.6.7",
         "bootstrap": "^5.3.3",
         "react": "18.2.0",
+        "react-burger-menu": "^3.0.9",
         "react-dom": "18.2.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "6.22.2",
@@ -47,6 +48,7 @@
         "@types/jsonwebtoken": "^9",
         "@types/node": "20.11.24",
         "@types/react": "18.2.63",
+        "@types/react-burger-menu": "^2.8.7",
         "@types/react-dom": "18.2.19",
         "@typescript-eslint/eslint-plugin": "7.1.1",
         "@typescript-eslint/parser": "7.1.1",
