--- a/webui/package.json
+++ b/webui/package.json
@@ -31,6 +31,8 @@
         "react-dom": "18.2.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "6.22.2",
+        "react-toastify": "^10.0.4",
+        "react-virtualized": "^9.22.5",
         "reactstrap": "^9.2.2",
         "redux": "^5.0.1",
         "redux-persist": "https://github.com/rt2zz/redux-persist"
@@ -50,6 +52,7 @@
         "@types/react": "18.2.63",
         "@types/react-burger-menu": "^2.8.7",
         "@types/react-dom": "18.2.19",
+        "@types/react-virtualized": "^9.21.29",
         "@typescript-eslint/eslint-plugin": "7.1.1",
         "@typescript-eslint/parser": "7.1.1",
         "@vitejs/plugin-react": "4.2.1",
@@ -59,6 +62,7 @@
         "c8": "9.1.0",
         "core-js": "3.36.0",
         "cssnano": "6.0.5",
+        "esbuild-plugin-react-virtualized": "^1.0.4",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.1.3",
